--- a/i3/config
+++ b/i3/config
@@ -40,7 +40,7 @@ bindsym $mod+Shift+q kill
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+d exec --no-startup-id rofi -run-list-command ". ~/.bash_aliases" -run-command "/bin/bash -i -c '{cmd}'" -show run -lines 5 -eh 2 -width 1920 -padding 500 -bw 0 -opacity 85
+bindsym $mod+d exec --no-startup-id rofi -run-list-command ". ~/.bash_aliases" -run-command "/bin/bash -i -c '{cmd}'" -show run
 
 # change focus
 bindsym $mod+j focus left
@@ -91,16 +91,16 @@ bindsym $mod+a focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
-# set $workspace1 ""
-# set $workspace2 ""
-# set $workspace3 ""
-# set $workspace4 ""
-# set $workspace5 ""
 
+# Workspace1 : 
 set $workspace1 "1"
+# Workspace2 : 
 set $workspace2 "2"
+# Workspace3 : 
 set $workspace3 "3"
+# Workspace5 : 
 set $workspace4 "4"
+# Workspace4 : 
 set $workspace5 "5"
 
 # switch to workspace
@@ -132,9 +132,14 @@ for_window [class="URxvt"] move to workspace $workspace1
 for_window [class="Atom"] move to workspace $workspace2
 for_window [class="Chromium-browser"] move to workspace $workspace3
 for_window [class="Google-chrome"] move to workspace $workspace3
-for_window [class="Spotify"] move to workspace $workspace4
-for_window [class="TelegramDesktop"] move to workspace $workspace5
+for_window [class="TelegramDesktop"] move to workspace $workspace4
+for_window [class="WhatsApp-Rebellin"] move to workspace $workspace4
+for_window [class="Spotify"] move to workspace $workspace5
 for_window [class="^.*"] border pixel 2
+
+#move to urgent workspace
+for_window [urgent="latest" class="[a-z]*elegram"] focus
+for_window [urgent="latest" class="[a-z]*chrome"] focus
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -163,7 +168,7 @@ mode "resize" {
         bindsym Right resize grow width 10 px or 10 ppt
 
         # back to normal: Enter or Escape
-        bindsym Return mode "default"xbac
+        bindsym Return mode "default"
         bindsym Escape mode "default"
 }
 
@@ -173,7 +178,7 @@ set $bg-color 	         #2f343f
 set $inactive-bg-color   #2f343f
 set $text-color          #f3f4f5
 set $inactive-text-color #676E7D
-set $urgent-bg-color     #E53935
+set $urgent-bg-color     #002B70
 
 # window colors
 #                       border              background         text                 indicator
@@ -197,22 +202,33 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 #           		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
 #         }
 # }
+
+# Custom shortcuts
+
 #custom lockscreen script (check .bash_aliases)
 #bindsym $mod+shift+x exec --no-startup-id /home/fil/.config/i3/scripts/lock.sh /home/fil/Pictures/lock.png
-bindsym $mod+shift+x exec betterlockscreen --lock blur
+
+bindsym $mod+shift+x exec betterlockscreen --lock dimblur
 bindsym $mod+shift+p exec poweroff
 bindsym $mod+shift+Escape exec reboot
 bindsym $mod+shift+n exec $HOME/.config/i3/scripts/pywal.sh next
-bindsym Print exec screenshot
+bindsym Print exec scrot ~/Pictures/Screenshots/%b%d::%H-%M-%S.png -q 100
+bindsym $mod+m move workspace to output left
+bindsym $mod+shift+f exec urxvt -e ranger
+bindsym $mod+g exec echo "" | rofi -config $HOME/.config/rofi/search-config -dmenu -p "Google Search" | xargs --no-run-if-empty -I{} google-chrome --high-dpi-support=1 --force-device-scale-factor=2 %U https://www.google.com/search?q={}
+bindsym $mod+c exec echo "" | rofi -config $HOME/.config/rofi/search-config -dmenu -p "URL" | xargs --no-run-if-empty -I{} google-chrome --high-dpi-support=1 --force-device-scale-factor=2 %U {}
+bindsym $mod+n exec xournalpp
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id ~/.config/i3/scripts/volume.sh inc #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id ~/.config/i3/scripts/volume.sh dec #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
+
 # Screen brightness controls
-bindsym XF86MonBrightnessUp exec light -A 5 # increase screen brightness
-bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec light -A 2 && light -O # increase screen brightness
+bindsym XF86MonBrightnessDown exec light -U 2 && light -O # decrease screen brightness
+exec_always --no-startup-id light -I
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play-pause
@@ -220,23 +236,30 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 
-exec_always xrandr --output eDP-1-1 --scale 1.0x1.0 --dpi 288
-exec_always xrandr --output eDP-1 --scale 1.0x1.0 --dpi 288
-exec rxvt
-#exec_always --no-startup-id feh --bg-fill ~/Pictures/background.jpg
+# Caps & Num lock keybind
 bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
 
-exec compton -f --config ~/.config/compton/config
+#exec_always --no-startup-id feh --bg-fill ~/Pictures/background.jpg
 #exec --no-startup-id /home/fil/.config/i3/scripts/lock.sh /home/fil/Pictures/lock.png
-exec betterlockscreen --lock blur
-#exec_always unclutter -idle 0.01 -root
-exec_always setxkbmap -option grp:alt_shift_toggle us,it
-exec --no-startup-id nm-applet
-exec --no-startup-id blueman-applet
+
+
+exec_always setxkbmap -option grp:alt_shift_toggle it,us
 exec_always --no-startup-id ~/.config/i3/scripts/pywal.sh
 exec_always --no-startup-id $HOME/.config/i3/scripts/polybarstart.sh
+#exec_always unclutter -idle 0.01 -root
+exec --no-startup-id nm-applet &
+exec --no-startup-id blueman-applet
+exec compton -f --config ~/.config/compton/config
+exec betterlockscreen --lock dimblur
+exec --no-startup-id exec $HOME/.config/i3/scripts/rotation.sh
+exec urxvt
+exec --no-startup-id redshift -l 45.073132:7.691706
+
+exec_always xrandr --output eDP-1-1 --scale 1.0x1.0 --dpi 288
+exec_always xrandr --output eDP-1 --scale 1.0x1.0 --dpi 288
+exec_always xrandr --output DP-1-1 --auto --right-of eDP-1-1 --dpi 105
 
 gaps outer 7
 gaps inner 5
